@@ -1,4 +1,4 @@
-# TODO: check imported packages - can exclude base stuff?; reportTime - by default no digits in s; some smart rbind_fill in all ...Folder functions() in case of missing columns; soundgen - pitch2 for dual source (desynchronized vocal folds); AM aspiration noise (not really needed, except maybe for glottis > 0); soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
+# TODO: check imported packages - can exclude base stuff?; some smart rbind_fill in all ...Folder functions() in case of missing columns; soundgen - pitch2 for dual source (desynchronized vocal folds); AM aspiration noise (not really needed, except maybe for glottis > 0); soundgen() should accept smth like pitch = c(300, NA, 150, 250) and interpret this as two syllables with a pause - use eg as preview in manual pitch correction; morph() - tempEffects; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
 
 # pitch_app: optional argument to load and open files in a folder; see a list of all uploaded files (add button - doing it with tooltips doesn't work); load audio + results to double-check old work
 
