@@ -609,7 +609,7 @@ server = function(input, output, session) {
         do.call(text, list(
           x = myPars$spectrogram_hover$x,
           y = input$spec_ylim[1] + .025 * diff(input$spec_ylim),
-          labels = convert_sec_to_hms(myPars$spectrogram_hover$x / 1000),
+          labels = convert_sec_to_hms(myPars$spectrogram_hover$x / 1000, 3),
           adj = .5))
       }
 
@@ -739,7 +739,7 @@ server = function(input, output, session) {
         box()
         # axis(side = 1)
         time_location = axTicks(1)
-        time_labels = convert_sec_to_hms(time_location / 1000)
+        time_labels = convert_sec_to_hms(time_location / 1000, 3)
         axis(side = 1, at = time_location, labels = time_labels)
         if (input$osc == 'dB') {
           axis(side = 4, at = seq(0, input$dynamicRange, by = 10))
